# pam-face-authentication

./: ProjectHome.md  WikiInstallationFromSource.md  WikiInstallationGuide.md  WikiIssues.md  WikiScreenshots.md  wikiChangeLog.md  wikiFeatureRequest.md
qtbranch/: CMakeLists.txt
qtbranch/data/ui/uifiles/: aboutDialog.ui  faceVerifier.ui
qtbranch/include/: detector.h  eyesDetector.h  faceDetector.h  faceTrainer.h  faceTrainerAdvSettings.h  faceVerifier.h  opencvWebcam.h  pam_face_authentication.h  pam_face_defines.h  verifier.h
qtbranch/src/: detector.cpp  eyesDetector.cpp  faceDetector.cpp  faceTrainer.cpp  faceTrainerAdvSettings.cpp  faceVerifier.cpp  fv_main.cpp  opencvWebcam.cpp  pam_face_authentication.cpp  qtUtils.cpp  test.cpp  tracker.cpp  utils.cpp  verifier.cpp  webcamImagePaint.cpp
qtbranch/tests/: CMakeLists.txt  eyes.pl  eyetest.sh  makerun.sh  reportrun.pl  runtest.sh
qtbranch/tests/src/: clipf.cpp  eyedf.cpp  findf.cpp  findf2.cpp
